pkg/syntax/parser/grammar/bigc_parser.go
// Code generated from grammar/BigC.g4 by ANTLR 4.13.0. DO NOT EDIT.

package parser // BigC

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type BigCParser struct {
	*antlr.BaseParser
}

var BigCParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func bigcParserInit() {
	staticData := &BigCParserStaticData
	staticData.LiteralNames = []string{
		"", "'['", "']'", "'int'", "'float'", "'bool'", "'char'", "'void'",
		"'('", "')'", "';'", "','", "'{'", "'}'", "'if'", "'else'", "'while'",
		"'return'", "'='", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'>='",
		"'<='", "'+'", "'-'", "'*'", "'/'", "'!'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "Identifier",
		"IntegerConstant", "FloatingConstant", "BooleanConstant", "CharConstant",
		"WS", "COMMENT", "MULTILINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"program", "declaration", "arrayNotation", "type", "declarationRemainder",
		"parameterList", "parameter", "block", "blockItem", "statement", "ifStatement",
		"elseClause", "nonIfStatement", "whileStatement", "returnStatement",
		"expression", "assignmentExpression", "assignmentRest", "variableInitializer",
		"logicalOrExpression", "logicalOrRest", "logicalAndExpression", "logicalAndRest",
		"equalityExpression", "equalityRest", "equalityOperator", "comparisonExpression",
		"comparisonRest", "comparisonOperator", "additionExpression", "additionExpressionRest",
		"addSubtractOperator", "multiplicationExpression", "multiplicationExpressionRest",
		"multDivModOperator", "unaryExpression", "unaryOperator", "postfixExpression",
		"arrayAccess", "functionCallArgs", "argList", "primaryExpression", "constant",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// BigCParserInit initializes any static state used to implement BigCParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewBigCParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func BigCParserInit() {
	staticData := &BigCParserStaticData
	staticData.once.Do(bigcParserInit)
}

// NewBigCParser produces a new parser instance for the optional input antlr.TokenStream.
func NewBigCParser(input antlr.TokenStream) *BigCParser {
	BigCParserInit()
	this := new(BigCParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &BigCParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "BigC.g4"

	return this
}

// BigCParser tokens.
const (
	BigCParserEOF               = antlr.TokenEOF
	BigCParserT__0              = 1
	BigCParserT__1              = 2
	BigCParserT__2              = 3
	BigCParserT__3              = 4
	BigCParserT__4              = 5
	BigCParserT__5              = 6
	BigCParserT__6              = 7
	BigCParserT__7              = 8
	BigCParserT__8              = 9
	BigCParserT__9              = 10
	BigCParserT__10             = 11
	BigCParserT__11             = 12
	BigCParserT__12             = 13
	BigCParserT__13             = 14
	BigCParserT__14             = 15
	BigCParserT__15             = 16
	BigCParserT__16             = 17
	BigCParserT__17             = 18
	BigCParserT__18             = 19
	BigCParserT__19             = 20
	BigCParserT__20             = 21
	BigCParserT__21             = 22
	BigCParserT__22             = 23
	BigCParserT__23             = 24
	BigCParserT__24             = 25
	BigCParserT__25             = 26
	BigCParserT__26             = 27
	BigCParserT__27             = 28
	BigCParserT__28             = 29
	BigCParserT__29             = 30
	BigCParserT__30             = 31
	BigCParserIdentifier        = 32
	BigCParserIntegerConstant   = 33
	BigCParserFloatingConstant  = 34
	BigCParserBooleanConstant   = 35
	BigCParserCharConstant      = 36
	BigCParserWS                = 37
	BigCParserCOMMENT           = 38
	BigCParserMULTILINE_COMMENT = 39
)

// BigCParser rules.
const (
	BigCParserRULE_program                      = 0
	BigCParserRULE_declaration                  = 1
	BigCParserRULE_arrayNotation                = 2
	BigCParserRULE_type                         = 3
	BigCParserRULE_declarationRemainder         = 4
	BigCParserRULE_parameterList                = 5
	BigCParserRULE_parameter                    = 6
	BigCParserRULE_block                        = 7
	BigCParserRULE_blockItem                    = 8
	BigCParserRULE_statement                    = 9
	BigCParserRULE_ifStatement                  = 10
	BigCParserRULE_elseClause                   = 11
	BigCParserRULE_nonIfStatement               = 12
	BigCParserRULE_whileStatement               = 13
	BigCParserRULE_returnStatement              = 14
	BigCParserRULE_expression                   = 15
	BigCParserRULE_assignmentExpression         = 16
	BigCParserRULE_assignmentRest               = 17
	BigCParserRULE_variableInitializer          = 18
	BigCParserRULE_logicalOrExpression          = 19
	BigCParserRULE_logicalOrRest                = 20
	BigCParserRULE_logicalAndExpression         = 21
	BigCParserRULE_logicalAndRest               = 22
	BigCParserRULE_equalityExpression           = 23
	BigCParserRULE_equalityRest                 = 24
	BigCParserRULE_equalityOperator             = 25
	BigCParserRULE_comparisonExpression         = 26
	BigCParserRULE_comparisonRest               = 27
	BigCParserRULE_comparisonOperator           = 28
	BigCParserRULE_additionExpression           = 29
	BigCParserRULE_additionExpressionRest       = 30
	BigCParserRULE_addSubtractOperator          = 31
	BigCParserRULE_multiplicationExpression     = 32
	BigCParserRULE_multiplicationExpressionRest = 33
	BigCParserRULE_multDivModOperator           = 34
	BigCParserRULE_unaryExpression              = 35
	BigCParserRULE_unaryOperator                = 36
	BigCParserRULE_postfixExpression            = 37
	BigCParserRULE_arrayAccess                  = 38
	BigCParserRULE_functionCallArgs             = 39
	BigCParserRULE_argList                      = 40
	BigCParserRULE_primaryExpression            = 41
	BigCParserRULE_constant                     = 42
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllDeclaration() []IDeclarationContext
	Declaration(i int) IDeclarationContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = BigCParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(BigCParserEOF, 0)
}

func (s *ProgramContext) AllDeclaration() []IDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclarationContext); ok {
			tst[i] = t.(IDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Declaration(i int) IDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BigCVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BigCParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, BigCParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&248) != 0 {
		{
			p.SetState(86)
			p.Declaration()
		}

		p.SetState(91)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(92)
		p.Match(BigCParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_() ITypeContext
	Identifier() antlr.TerminalNode
	DeclarationRemainder() IDeclarationRemainderContext
	ArrayNotation() IArrayNotationContext

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_declaration
	return p
}

func InitEmptyDeclarationContext(p *DeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_declaration
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = BigCParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *DeclarationContext) Identifier() antlr.TerminalNode {
	return s.GetToken(BigCParserIdentifier, 0)
}

func (s *DeclarationContext) DeclarationRemainder() IDeclarationRemainderContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationRemainderContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationRemainderContext)
}

func (s *DeclarationContext) ArrayNotation() IArrayNotationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArrayNotationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArrayNotationContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (s *DeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BigCVisitor:
		return t.VisitDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BigCParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, BigCParserRULE_declaration)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(94)
		p.Type_()
	}
	{
		p.SetState(95)
		p.Match(BigCParserIdentifier)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == BigCParserT__0 {
		{
			p.SetState(96)
			p.ArrayNotation()
		}

	}
	{
		p.SetState(99)
		p.DeclarationRemainder()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IArrayNotationContext is an interface to support dynamic dispatch.
type IArrayNotationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expression() IExpressionContext

	// IsArrayNotationContext differentiates from other interfaces.
	IsArrayNotationContext()
}

type ArrayNotationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArrayNotationContext() *ArrayNotationContext {
	var p = new(ArrayNotationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_arrayNotation
	return p
}

func InitEmptyArrayNotationContext(p *ArrayNotationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_arrayNotation
}

func (*ArrayNotationContext) IsArrayNotationContext() {}

func NewArrayNotationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArrayNotationContext {
	var p = new(ArrayNotationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = BigCParserRULE_arrayNotation

	return p
}

func (s *ArrayNotationContext) GetParser() antlr.Parser { return s.parser }

func (s *ArrayNotationContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ArrayNotationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArrayNotationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ArrayNotationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.EnterArrayNotation(s)
	}
}

func (s *ArrayNotationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.ExitArrayNotation(s)
	}
}

func (s *ArrayNotationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BigCVisitor:
		return t.VisitArrayNotation(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BigCParser) ArrayNotation() (localctx IArrayNotationContext) {
	localctx = NewArrayNotationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, BigCParserRULE_arrayNotation)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(101)
		p.Match(BigCParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(102)
		p.Expression()
	}
	{
		p.SetState(103)
		p.Match(BigCParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsTypeContext differentiates from other interfaces.
	IsTypeContext()
}

type TypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeContext() *TypeContext {
	var p = new(TypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_type
	return p
}

func InitEmptyTypeContext(p *TypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_type
}

func (*TypeContext) IsTypeContext() {}

func NewTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeContext {
	var p = new(TypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = BigCParserRULE_type

	return p
}

func (s *TypeContext) GetParser() antlr.Parser { return s.parser }
func (s *TypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.EnterType(s)
	}
}

func (s *TypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.ExitType(s)
	}
}

func (s *TypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BigCVisitor:
		return t.VisitType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BigCParser) Type_() (localctx ITypeContext) {
	localctx = NewTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, BigCParserRULE_type)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(105)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&248) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclarationRemainderContext is an interface to support dynamic dispatch.
type IDeclarationRemainderContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Block() IBlockContext
	ParameterList() IParameterListContext
	VariableInitializer() IVariableInitializerContext

	// IsDeclarationRemainderContext differentiates from other interfaces.
	IsDeclarationRemainderContext()
}

type DeclarationRemainderContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationRemainderContext() *DeclarationRemainderContext {
	var p = new(DeclarationRemainderContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_declarationRemainder
	return p
}

func InitEmptyDeclarationRemainderContext(p *DeclarationRemainderContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_declarationRemainder
}

func (*DeclarationRemainderContext) IsDeclarationRemainderContext() {}

func NewDeclarationRemainderContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationRemainderContext {
	var p = new(DeclarationRemainderContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = BigCParserRULE_declarationRemainder

	return p
}

func (s *DeclarationRemainderContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationRemainderContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *DeclarationRemainderContext) ParameterList() IParameterListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParameterListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParameterListContext)
}

func (s *DeclarationRemainderContext) VariableInitializer() IVariableInitializerContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableInitializerContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableInitializerContext)
}

func (s *DeclarationRemainderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationRemainderContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationRemainderContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.EnterDeclarationRemainder(s)
	}
}

func (s *DeclarationRemainderContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BigCListener); ok {
		listenerT.ExitDeclarationRemainder(s)
	}
}

func (s *DeclarationRemainderContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BigCVisitor:
		return t.VisitDeclarationRemainder(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BigCParser) DeclarationRemainder() (localctx IDeclarationRemainderContext) {
	localctx = NewDeclarationRemainderContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, BigCParserRULE_declarationRemainder)
	var _la int

	p.SetState(117)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case BigCParserT__7:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(107)
			p.Match(BigCParserT__7)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(109)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&248) != 0 {
			{
				p.SetState(108)
				p.ParameterList()
			}

		}
		{
			p.SetState(111)
			p.Match(BigCParserT__8)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(112)
			p.Block()
		}

	case BigCParserT__9, BigCParserT__17:
		p.EnterOuterAlt(localctx, 2)
		p.SetState(114)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == BigCParserT__17 {
			{
				p.SetState(113)
				p.VariableInitializer()
			}

		}
		{
			p.SetState(116)
			p.Match(BigCParserT__9)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IParameterListContext is an interface to support dynamic dispatch.
type IParameterListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllParameter() []IParameterContext
	Parameter(i int) IParameterContext

	// IsParameterListContext differentiates from other interfaces.
	IsParameterListContext()
}

type ParameterListContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParameterListContext() *ParameterListContext {
	var p = new(ParameterListContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_parameterList
	return p
}

func InitEmptyParameterListContext(p *ParameterListContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = BigCParserRULE_parameterList
}

func (*ParameterListContext) IsParameterListContext() {}

func NewParameterListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParameterListContext {
	var p = new(ParameterListContext)
